feat(api): upgrade to Java 21, Spring Boot 3.5.6, and OpenAPI 2.8.13